--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@include mat.core();
+
+$primary-palette-light: mat.define-palette(mat.$purple-palette, 500, 800, 900);
+$accent-palette-light: mat.define-palette(mat.$indigo-palette, 500, 800, 900);
+
+$primary-palette-dark: mat.define-palette(mat.$deep-purple-palette, 500, 800, 900);
+$accent-palette-dark: mat.define-palette(mat.$blue-grey-palette, 500, 800, 900);
+
+$light-theme: mat.define-light-theme((
+    color: (
+        primary: $primary-palette-light,
+        accent: $accent-palette-light
+    ),
+    typography: mat.define-typography-config(),
+    density: 0
+));
+
+$dark-theme: mat.define-dark-theme((
+    color: (
+        primary: $primary-palette-dark,
+        accent: $accent-palette-dark
+    ),
+    typography: mat.define-typography-config(),
+    density: 0
+));
+
+@include mat.core-theme($light-theme);
+@include mat.button-theme($light-theme);
+
+
+@media (prefers-color-scheme: dark){
+@include mat.core-theme($dark-theme);
+@include mat.button-theme($dark-theme);
+}
+
+app-square>button{
+    font-size: 10pt;
+    min-height: 100%;
+    width: 100%;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
