--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,10 +1,26 @@
 main{
-    display: grid;
-    grid-template-columns: 200px 200px 200px;
-    grid-gap: 0px;
+    display: flexbox;
 }
 
 app-square{
     border: 1px gray solid;
-    height: 200px; 
+    height: 150px; 
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: 150px 150px 150px;
+    grid-gap: 0px;
+}
+.block{
+    display: flex;
+    justify-content: center;
+    margin: 30px auto;
+    font-size: 2em;
+}
+#start-over{
+    border-radius: 0;
+    height: 60px;
+    width: 20%;
+    text-transform: uppercase;
 }
