--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,25 +2,30 @@
 @use '@angular/material' as mat;
 @include mat.core();
 
-$primary-palette-light: mat.define-palette(mat.$purple-palette, 500, 800, 900);
-$accent-palette-light: mat.define-palette(mat.$indigo-palette, 500, 800, 900);
+$primary-palette-light: mat.define-palette(mat.$gray-palette, 700);
+$accent-palette-light: mat.define-palette(mat.$blue-palette, 700);
+$warn-palette-light: mat.define-palette(mat.$red-palette, 700);
 
-$primary-palette-dark: mat.define-palette(mat.$deep-purple-palette, 500, 800, 900);
-$accent-palette-dark: mat.define-palette(mat.$blue-grey-palette, 500, 800, 900);
+$primary-palette-dark: mat.define-palette(mat.$gray-palette, 400);
+$accent-palette-dark: mat.define-palette(mat.$blue-palette, 400);
+$warn-palette-dark: mat.define-palette(mat.$red-palette, 400);
+
 
 $light-theme: mat.define-light-theme((
-    color: (
+    color:(
         primary: $primary-palette-light,
-        accent: $accent-palette-light
+        accent: $accent-palette-light,
+        warn: $warn-palette-light
     ),
     typography: mat.define-typography-config(),
     density: 0
 ));
 
 $dark-theme: mat.define-dark-theme((
-    color: (
+    color:(
         primary: $primary-palette-dark,
-        accent: $accent-palette-dark
+        accent: $accent-palette-dark,
+        warn: $warn-palette-dark
     ),
     typography: mat.define-typography-config(),
     density: 0
@@ -35,8 +40,8 @@ $dark-theme: mat.define-dark-theme((
 @include mat.button-theme($dark-theme);
 }
 
+
 app-square>button{
-    font-size: 10pt;
     min-height: 100%;
     width: 100%;
 }
